[gd_scene load_steps=11 format=3 uid="uid://6hk2o4j44jb2"]

[ext_resource type="Script" path="res://GraphReport/graph_report.gd" id="1_1j8lm"]
[ext_resource type="Texture2D" uid="uid://cmfviwdjfkulp" path="res://UI/Images/full_screen_background.png" id="1_casad"]
[ext_resource type="Theme" uid="uid://7ug4svgqw7bl" path="res://UI/Themes/my_header_label_theme.tres" id="2_g62n0"]
[ext_resource type="Theme" uid="uid://bio0np2bdwycd" path="res://UI/Themes/my_label_theme.tres" id="3_eapv0"]
[ext_resource type="Theme" uid="uid://wgr8ngf3t34r" path="res://UI/Themes/my_button_theme.tres" id="5_378f0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdoeq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xosmk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ry86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ple5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24chu"]

[node name="GraphReport" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1j8lm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.196078, 0.196078, 1)

[node name="Foreground" type="NinePatchRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.046
anchor_right = 0.964
anchor_bottom = 0.954
offset_left = 0.879997
offset_top = 0.319996
offset_right = -0.880127
offset_bottom = -0.320068
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_casad")
patch_margin_left = 42
patch_margin_top = 42
patch_margin_right = 42
patch_margin_bottom = 42

[node name="CloseButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.978
anchor_right = 1.0
anchor_bottom = 0.041
offset_left = 31.1598
offset_bottom = -32.18
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cdoeq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xosmk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ry86")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ple5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24chu")

[node name="HeaderLabel" type="Label" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.094
offset_top = 0.400002
offset_bottom = -0.119995
grow_horizontal = 2
theme = ExtResource("2_g62n0")
text = "Header Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimesStrip" type="HBoxContainer" parent="Background/Foreground"]
layout_mode = 2
offset_left = 590.0
offset_top = 122.0
offset_right = 1740.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "This is a test tooltip
I want to see
if it wil
do multi liners
"
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|9"
vertical_alignment = 1

[node name="Label2" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|10"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|11"
vertical_alignment = 1

[node name="Label4" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|12"
vertical_alignment = 1

[node name="Label5" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|1"
vertical_alignment = 1

[node name="Label6" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|2"
vertical_alignment = 1

[node name="Label7" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|3"
vertical_alignment = 1

[node name="Label8" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|4"
vertical_alignment = 1

[node name="Label9" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|5"
vertical_alignment = 1

[node name="Label10" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|6"
vertical_alignment = 1

[node name="Label11" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|7"
vertical_alignment = 1

[node name="Label12" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|8"
vertical_alignment = 1

[node name="Label13" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|9"
vertical_alignment = 1

[node name="Label14" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|10"
vertical_alignment = 1

[node name="Label15" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|11"
vertical_alignment = 1

[node name="Label16" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|12"
vertical_alignment = 1

[node name="Label17" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|1"
vertical_alignment = 1

[node name="Label18" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|2"
vertical_alignment = 1

[node name="Label19" type="Label" parent="Background/Foreground/TimesStrip"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme = ExtResource("3_eapv0")
text = "|3"
vertical_alignment = 1

[node name="GraphScrollContainer" type="ScrollContainer" parent="Background/Foreground"]
custom_minimum_size = Vector2(1687, 650)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.168
anchor_right = 0.974
anchor_bottom = 0.832
offset_left = 0.21994
offset_top = 0.35994
offset_right = -0.219971
offset_bottom = -0.359985
grow_horizontal = 2
grow_vertical = 2

[node name="GraphContainer" type="HBoxContainer" parent="Background/Foreground/GraphScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MovieNamesContainer" type="VBoxContainer" parent="Background/Foreground/GraphScrollContainer/GraphContainer"]
custom_minimum_size = Vector2(533, 650)
layout_mode = 2
theme_override_constants/separation = 20

[node name="MovieGraphsContainer" type="VBoxContainer" parent="Background/Foreground/GraphScrollContainer/GraphContainer"]
custom_minimum_size = Vector2(1150, 650)
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.815
anchor_top = 0.898
anchor_right = 0.983
anchor_bottom = 0.949
offset_left = -0.700073
offset_top = -0.039978
offset_right = 0.26001
offset_bottom = -0.0199585
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_378f0")
text = "Back"

[connection signal="pressed" from="Background/Foreground/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Background/Foreground/BackButton" to="." method="_on_back_button_pressed"]
